--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,11 @@ ACCESS_TOKEN_SECRET=<ACCESS_TOKEN_SECRET>
 REFRESH_TOKEN_SECRET=<REFRESH_TOKEN_SECRET>
 ACCESS_TOKEN_EXPIRY=<ACCESS_TOKEN_EXPIRY>
 REFRESH_TOKEN_EXPIRY=<REFRESH_TOKEN_EXPIRY>
+
+# Database
+DB_CLIENT=pg
+DB_NAME="backend-assignment"
+DB_HOST="127.0.0.1"
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_PORT=5432
