--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts"
+    "start": "nodemon src/index.ts",
+    "make:migration": "knex --knexfile=src/knexFile.ts migrate:make -x ts --env development",
+    "migrate": "knex --knexfile=src/knexFile.ts migrate:latest --verbose",
+    "rollback": "knex --knexfile=src/knexFile.ts migrate:rollback --verbose",
+    "seed": "knex --knexfile=src/knexFile.ts seed:run --verbose",
+    "make:seeder": "knex --knexfile=src/knexFile.ts seed:make -x ts --env development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/camelize": "^1.0.0",
     "@types/express": "^4.17.21",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
+    "@types/to-snake-case": "^1.0.2",
     "@types/typescript": "^2.0.0",
     "@types/winston": "^2.4.4",
     "nodemon": "^3.0.2",
@@ -23,11 +30,16 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "camelize": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
+    "pg": "^8.11.3",
+    "sqlite3": "^5.1.7-rc.0",
+    "to-snake-case": "^1.0.0",
     "winston": "^3.11.0"
   }
 }
